<resources>

    <!-- About categories -->
    <string name="about_cat_app">App</string>
    <string name="about_cat_author">Author</string>

    <!-- About Items -->
    <string name="about_changes">Changes</string>
    <string name="about_designer_information">Designed by <b>Davide Giuseppe Farella ( 4face Studio )</b></string>
    <string name="about_developer_information">Developed by <b>Davide Giuseppe Farella ( 4face Studio )</b></string>
    <string name="about_email_information"><b>Mail</b>\nmail@4face.studio</string>
    <string name="about_icon_pack_information">Icons from <i>Kawaii</i> icon pack on FlatIcon.com</string>
    <string name="about_list_bullet_arg">• %s</string>
    <string name="about_rate"><u>Rate the App</u></string>
    <string name="about_report_issue"><u>Report an issue</u></string>
    <string name="about_telegram_group"><u>Telegram group</u></string>
    <string name="about_telegram_group_link">https://t.me/androidFreshTv</string>
    <string name="about_version_code_arg"><b>Version code</b>\n%d</string>
    <string name="about_version_name_arg"><b>Version name</b>\n%s</string>
    <string name="about_website_information"><b>Website</b>\nhttp://4face.studio</string>

    <!-- Actions -->
    <string name="action_collapse">Collapse</string>
    <string name="action_expand">Expand</string>

    <!-- Changes TODO update before release -->
    <string name="about_roadmap">Roadmap</string>
    <string-array name="about_roadmap_values">
        <item>Store %1Movies\' progress%2</item>
        <item>Improvements on %1channel\'s clean up%2 on Playlist deletion in database</item>
        <item>%1Floating Player%2</item>
        <item>%1Search%2 feature</item>
        <item>%1Edit%2 Groups and Channels</item>
        <item>%1Info%2 for Movies</item>
        <item>Improve visibility of %barely visible icons%2</item>
        <item>Schedule %1Night mode%2</item>
        <item>%1Chromecast%2 support</item>
    </string-array>
    <string name="about_what_new">What\'s new</string>
    <string-array name="about_what_new_values">
        <item>%1Fixed navigation%2 to Player from Movies</item>
        <item>Other %1bugs fixed%2</item>
        <item>%1Performance%2 improvements</item>
        <item>%1Italian%2 translation</item>
        <item>Restore %1last open Group and Channel%2\'s position</item>
        <item>Channel\'s %1Groups shortcut%2 on bottom bar</item>
        <item>Bug-fix for %1Samsung Galaxy S4%2</item>
        <item>Link to %1Telegram group%2 in About screen</item>
        <item>%1Dark Theme%2</item>A
        <item>%1EPG%2 partially fixed</item>
        <item>Nicer %1Drawer%2 menu</item>
        <item>%1Don\'t interrupt playing%2 during screen\'s rotation</item>
    </string-array>

    <!-- Menu -->
    <string name="menu_about">About</string>

    <!-- Others -->
    <string name="coming_soon">Coming Soon</string>

    <!-- Titles -->
    <string name="title_about">About</string>

</resources>
